@@ -1,6 +1,9 @@
 0.17
 
-    Pythonicdaemon: threading optimized
+    PythonicDaemon: threading optimized
+    PythonicDaemon: version info added
+    PythonicDaemon: update logfile fixed
+    Basic Scheduler: Bug fixed
 
 
 0.16
